@@ -383,6 +383,7 @@ void CQuake3ShaderSceneNode::render()
 
 		material.TextureLayer[0].TextureWrapU = q.TextureAddressMode;
 		material.TextureLayer[0].TextureWrapV = q.TextureAddressMode;
+		material.TextureLayer[0].TextureWrapW = q.TextureAddressMode;
 		//material.TextureLayer[0].TrilinearFilter = 1;
 		//material.TextureLayer[0].AnisotropicFilter = 0xFF;
 		material.setTextureMatrix( 0, textureMatrix );
